fix(1.2.8): 修复生成 swagger doc 后，服务无法启动的问题
