# docs/swagger.json
@@ -1216,6 +1216,49 @@
                 }
             }
         },
+        "/api/cron/exec/{id}": {
+            "patch": {
+                "security": [
+                    {
+                        "LoginToken": []
+                    }
+                ],
+                "description": "手动执行单条任务",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "API.cron"
+                ],
+                "summary": "手动执行单条任务",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "hashId",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/cron.detailResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/code.Failure"
+                        }
+                    }
+                }
+            }
+        },
         "/api/cron/used": {
             "patch": {
                 "security": [
@@ -1432,47 +1475,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/cron.modifyResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/code.Failure"
-                        }
-                    }
-                }
-            },
-            "patch": {
-                "security": [
-                    {
-                        "LoginToken": []
-                    }
-                ],
-                "description": "手动执行单条任务",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "API.cron"
-                ],
-                "summary": "手动执行单条任务",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "hashId",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/cron.detailResponse"
                         }
                     },
                     "400": {
